# fastApiDemo

./: .env  .env.development  .env.production  .env.tmp  .env_template  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 5287bdecd30e_start_revision_new_database.py  5448b76825c6_uuid_type_in_id_column.py  870093669fd7_unique_constraint_uniq_identification.py  b0eef663a7b1_v3_0_identification_enum.py  b217d9825b38_organization_headquarter_models.py
app/: .env  main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: headquarters.py  organizations.py  seed.py
app/core/: config.py
app/core/exceptions/: exceptionsMiddleware.py
app/core/exceptions/handlers/: validation.py
app/crud/: __init__.py  base.py  crud_headquarter.py  crud_organization.py
app/db/: base.py  base_class.py  revision.py  session.py
app/models/: __init__.py  headquarter.py  organization.py
app/schemas/: __init__.py  headquarter.py  organization.py
app/tests/: conftest.py  test_data.json
app/tests/crud/: test_organization.py
app/tests/utils/: organization.py  utils.py
script/: load-env-file.sh  setup_env.sh  up_env.sh
