[tool.poetry]
name = "fastapidemo"
version = "0.1.0"
description = "This is a exercise to learn how use FastApi in a profesional application"
authors = ["juanMaAV92 <juanmanuel.armero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.5"}
sqlalchemy = "^2.0.5"
alembic = "^1.10.1"
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
